--- a/CLIENT/eCommerceSystem/css.css
+++ b/CLIENT/eCommerceSystem/css.css
@@ -2,7 +2,7 @@ asd {
   background-color: #d80000;
 }
 sd {
-  background-color: #f5f5f5;
+  background-color: #b4b4b4;
   text-align: start;
   justify-content: space-between;
 }
