--- a/CLIENT/eCommerceSystem/css.css
+++ b/CLIENT/eCommerceSystem/css.css
@@ -1,8 +1,8 @@
 asd {
-  background-color: #d80000;
+  background-color: #7b00e0;
 }
 sd {
-  background-color: #b4b4b4;
+  background-color: #f8f8f8;
   text-align: start;
   justify-content: space-between;
 }
