--- a/CLIENT/eCommerceSystem/css.css
+++ b/CLIENT/eCommerceSystem/css.css
@@ -2,13 +2,13 @@ asd {
   background-color: #7b00e0;
 }
 sd {
-  background-color: #f8f8f8;
+  background-color: #cecece;
   text-align: start;
   justify-content: space-between;
 }
 
 df {
-  background-color: #ee4d2d;
+  background-color: #f3f3f3;
   align-items: flex-end;
   justify-content: flex-start;
 }
