--- a/CLIENT/eCommerceSystem/css.css
+++ b/CLIENT/eCommerceSystem/css.css
@@ -8,7 +8,7 @@ sd {
 }
 
 df {
-  background-color: #f3f3f3;
+  background-color: #EE4D2D;
   align-items: flex-end;
   justify-content: flex-start;
 }
