--- a/CLIENT/eCommerceSystem/css.css
+++ b/CLIENT/eCommerceSystem/css.css
@@ -2,13 +2,13 @@ asd {
   background-color: #7b00e0;
 }
 sd {
-  background-color: #cecece;
+  background-color: #a0a0a0;
   text-align: start;
   justify-content: space-between;
 }
 
 df {
-  background-color: #EE4D2D;
+  background-color: #f55939;
   align-items: flex-end;
   justify-content: flex-start;
 }
