--- a/CLIENT/eCommerceSystem/css.css
+++ b/CLIENT/eCommerceSystem/css.css
@@ -1,8 +1,8 @@
 asd {
-  background-color: #7b00e0;
+  background-color: #d4d4d4;
 }
 sd {
-  background-color: #a0a0a0;
+  background-color: #00da00;
   text-align: start;
   justify-content: space-between;
 }
