--- a/CLIENT/eCommerceSystem/css.css
+++ b/CLIENT/eCommerceSystem/css.css
@@ -2,13 +2,13 @@ asd {
   background-color: #d4d4d4;
 }
 sd {
-  background-color: #00da00;
+  background-color: #aa0000;
   text-align: start;
   justify-content: space-between;
 }
 
 df {
-  background-color: #f55939;
+  background-color: #db3918;
   align-items: flex-end;
   justify-content: flex-start;
 }
